Agrego boton saludar y alerta

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <button>Saludar</button>
+    <button onclick="saludar()">Saludar</button>
+
+    <script>
+        function saludar(){
+            alert("Hola!")
+        }
+    </script>
 </body>
 </html>
