--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="eventos.js"></script>
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
+   <div id="miDiv">
     <button onclick="saludar()">Saludar</button>
-
     <script>
         function saludar(){
             alert("Hola!")
         }
     </script>
+    </div>
 </body>
 </html>
