Solucione el problema de las alertas juntas

--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
 </head>
 <body>
    <div id="miDiv">
-    <button onclick="saludar()">Saludar</button>
-    <script>
-        function saludar(){
-            alert("Hola!")
-        }
-    </script>
+    <button id="btnSaludar">Saludar</button>
     </div>
 </body>
 </html>
